# goit-pycore-hw-08

./: Dockerfile  consple_ui.py  main.py  pyproject.toml  serialization.py  task1.py
